// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CodeHealth > matches snapshot with high risk data 1`] = `
<div>
  <div
    class="code-health"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        代码健康度
      </h2>
      <div
        class="card-subtitle"
      >
        代码质量与活动指标
      </div>
    </div>
    <div
      class="code-health-content"
    >
      <div
        class="code-metrics"
      >
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            未合并PR数
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              20
            </span>
            <div
              class="metric-trend negative"
            >
              ⚠️ 高
            </div>
          </div>
        </div>
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            提交频率
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              3
            </span>
            <div
              class="metric-unit"
            >
              次/周
            </div>
          </div>
        </div>
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            单一贡献者比例
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              80
              %
            </span>
            <div
              class="metric-trend warning"
            >
              高风险
            </div>
          </div>
        </div>
      </div>
      <div
        class="distribution-section"
      >
        <h3
          class="section-title"
        >
          代码变更分布
        </h3>
        <div
          class="distribution-chart"
        >
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              后端
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 10%; background-color: #3f51b5;"
              />
              <div
                class="bar-percentage"
              >
                10
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              前端
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 80%; background-color: #2196f3;"
              />
              <div
                class="bar-percentage"
              >
                80
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              基础设施
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 5%; background-color: #ff9800;"
              />
              <div
                class="bar-percentage"
              >
                5
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              文档
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 5%; background-color: #4caf50;"
              />
              <div
                class="bar-percentage"
              >
                5
                %
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CodeHealth > matches snapshot with normal data 1`] = `
<div>
  <div
    class="code-health"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        代码健康度
      </h2>
      <div
        class="card-subtitle"
      >
        代码质量与活动指标
      </div>
    </div>
    <div
      class="code-health-content"
    >
      <div
        class="code-metrics"
      >
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            未合并PR数
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              5
            </span>
            <div
              class="metric-trend positive"
            >
              ✓ 良好
            </div>
          </div>
        </div>
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            提交频率
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              12
            </span>
            <div
              class="metric-unit"
            >
              次/周
            </div>
          </div>
        </div>
        <div
          class="code-metric"
        >
          <div
            class="code-metric-label"
          >
            单一贡献者比例
          </div>
          <div
            class="code-metric-value"
          >
            <span
              class="metric-number"
            >
              25
              %
            </span>
            <div
              class="metric-trend positive"
            >
              平衡
            </div>
          </div>
        </div>
      </div>
      <div
        class="distribution-section"
      >
        <h3
          class="section-title"
        >
          代码变更分布
        </h3>
        <div
          class="distribution-chart"
        >
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              后端
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 40%; background-color: #3f51b5;"
              />
              <div
                class="bar-percentage"
              >
                40
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              前端
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 35%; background-color: #2196f3;"
              />
              <div
                class="bar-percentage"
              >
                35
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              基础设施
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 15%; background-color: #ff9800;"
              />
              <div
                class="bar-percentage"
              >
                15
                %
              </div>
            </div>
          </div>
          <div
            class="distribution-bar"
          >
            <div
              class="bar-label"
            >
              文档
            </div>
            <div
              class="bar-container"
            >
              <div
                class="bar-fill"
                style="width: 10%; background-color: #4caf50;"
              />
              <div
                class="bar-percentage"
              >
                10
                %
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
